# OatppCRUDWReact

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  AppComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/controller/: StaticController.hpp
src/service/: TemplateService.hpp
src/templates/: asset-manifest.json  example.html  index.html  package-lock.json  package.json  proxy-server.js  proxy-server.mjs
src/templates/static/js/: 453.d7dd08d2.chunk.js  453.d7dd08d2.chunk.js.map  main.4c8f09c9.js  main.4c8f09c9.js.map
utility/: install.ps1
